<resources>
    <string name="app_name">Medic Log</string>
    <string name="main_menu">Main menu</string>
    <string name="back_to_previous_page">Back to previous page</string>
    <string name="title_home">Home</string>
    <string name="toast_back_press_exit">Press BACK again to exit</string>
    <string name="title_settings">Settings</string>
    <string name="title_licenses">Licenses</string>
    <string name="title_log_file">Log File</string>
    <string name="share_log_file">Share log file</string>
    <string name="error_sharing_log_file">Error sharing log file</string>
    <string name="log_file_deleted">Log file deleted</string>
    <string name="title_version">Version</string>
    <string name="clear_log_file">Clear log file</string>
    <string name="title_no_record">No Record</string>
    <string name="title_add_profile">Add Profile</string>
    <string name="form_name">Name</string>
    <string name="form_about">About</string>
    <string name="save">Save</string>
    <string name="name_is_required">Name is required</string>
    <string name="error_failed_to_add_profile">Failed to add profile</string>
    <string name="success_adding_new_profile">New profile added %s</string>
    <string name="error_failed_to_update_profile">Failed to update profile</string>
    <string name="success_updating_profile">Profile updated %s</string>
    <string name="title_confirm">Confirm</string>
    <string name="confirm_delete_profile">Delete profile %s ?</string>
    <string name="error_deleting_profile">Error deleting profile</string>
    <string name="success_deleting_profile">Delete %s</string>
    <string name="hint_type_to_search">Type here to search</string>
    <string name="title_profiles">Profiles</string>
    <string name="title_update_profile">Update Profile</string>
    <string name="confirm_delete_note">Delete note?</string>
    <string name="error_deleting_note">Error deleting note</string>
    <string name="success_deleting_note">Note deleted</string>
    <string name="title_notes">Notes</string>
    <string name="title_select_profile">Select Profile</string>
    <string name="title_select_profiles">Select Profiles</string>
    <string name="profile">Profile</string>
    <string name="title_add_note">Add Note</string>
    <string name="content_is_required">Content is required</string>
    <string name="entry_date_time_is_required">Entry date time is required</string>
    <string name="form_entry_date_time">Entry Date Time</string>
    <string name="profile_is_required">Profile is required</string>
    <string name="error_failed_to_add_note">Failed to add note</string>
    <string name="success_adding_note">New note added</string>
    <string name="form_content">Content</string>
    <string name="note_is_required">Note is required</string>
    <string name="title_add_medicine">Add Medicine</string>
    <string name="title_medicine">Medicine (%d)</string>
    <string name="title_update_medicine">Update Medicine</string>
    <string name="title_medicine_reminder">Medicine Reminder</string>
    <string name="form_start_date_time">Start Date Time</string>
    <string name="title_add_medicine_reminder">Add Medicine Reminder</string>
    <string name="title_update_medicine_reminder">Update Medicine Reminder</string>
    <string name="start_date_time_is_required">Start date time is required</string>
    <string name="message_is_required">Message is required</string>
    <string name="title_update_note">Update Note</string>
    <string name="success_updating_note">Note updated</string>
    <string name="error_failed_to_update_note">Failed updating note</string>
    <string name="notification_title_medicine_reminder">%s, %s</string>
    <string name="notification_channel_name_medicine_reminder">Medicine Reminder</string>
    <string name="notification_channel_description_medicine_reminder">Remind you of your medicine</string>
    <string name="take_medicine">Take</string>
    <string name="disable_reminder">Disable</string>
    <string name="snooze">Later</string>
    <string name="title_take_medicine">Take Medicine</string>
    <string name="taken_date_time_is_required">Taken date time is required</string>
    <string name="description_is_required">Description is required</string>
    <string name="title_update_medicine_intake">Update Medicine Intake</string>
    <string name="title_add_medicine_intake">Add Medicine Intake</string>
    <string name="success_updating_medicine_intake">Success updating medicine intake</string>
    <string name="success_adding_medicine_intake">Medicine intake added</string>
    <string name="form_taken_date_time">Taken date time</string>
    <string name="success_updating_medicine">Medicine updated</string>
    <string name="success_adding_medicine">Medicine added</string>
    <string name="success_deleting_medicine">Medicine deleted</string>
    <string name="confirm_delete_medicine">Delete medicine "%s" ?</string>
    <string name="success_updating_medicine_reminder">Medicine reminder updated</string>
    <string name="success_adding_medicine_reminder">Medicine reminder added</string>
    <string name="confirm_delete_medicine_reminder">Delete reminder \"%s\" ?</string>
    <string name="success_deleting_medicine_reminder">Medicine reminder deleted</string>
    <string name="title_medicine_intake_list">Medicine Intake List</string>
    <string name="confirm_delete_medicine_intake">Delete medicine intake \"%s\" ?</string>
    <string name="success_deleting_medicine_intake">Medicine intake deleted</string>
    <string name="theme_setting">Theme Setting</string>
    <string name="follow_system">Follow System</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="title_reminder_days">Reminder Days</string>
    <string name="days_mon">Mon</string>
    <string name="days_tue">Tue</string>
    <string name="days_wed">Wed</string>
    <string name="days_thu">Thu</string>
    <string name="days_fri">Fri</string>
    <string name="days_sat">Sat</string>
    <string name="days_sun">Sun</string>
    <string name="reminder_days_is_required">Reminder days is required</string>
    <string name="form_description">Description</string>
    <string name="form_message">Message</string>
    <string name="tag_is_required">Tag is required</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="form_tag">Tag</string>
    <string name="success_adding_tag">Tag added</string>
    <string name="title_tag">Tag (%d)</string>
    <string name="success_deleting_note_tag">Note tag deleted</string>
    <string name="error_deleting_note_attachment">Error deleting note attachment</string>
    <string name="success_deleting_note_attachment">Note attachment deleted</string>
    <string name="title_attachment">Attachment (%d)</string>
    <string name="title_add_note_attachment">Add Note Attachment</string>
    <string name="success_adding_note_attachment">Note attachment added</string>
    <string name="confirm_delete_attachment">Delete attachment?</string>
    <string name="success_updating_note_attachment">Note attachment updated</string>
    <string name="title_update_note_attachment">Update Note Attachment</string>
    <string name="add_image">Add image</string>
    <string name="add_photo">Add photo</string>
    <string name="title_files">Files</string>
    <string name="error_deleting_note_attachment_file">Error deleting note attachment file</string>
    <string name="share_image">Share image</string>
    <string name="share_text">Share text</string>
    <string name="buy_developer_a_coffee">Buy developer a coffee</string>
    <string name="donation_pitch">Support developer, treat a cup of coffee</string>
    <string name="trakteer">Trakteer</string>
    <string name="donation_other_apps">Other apps by developer: %s</string>
    <string name="donation_thank_you">Thank you for your support</string>
    <string name="error_please_select_profile">Error, please select profile</string>
    <string name="title_export_all">Export All Profile</string>
    <string name="title_export_profiles">Export Profiles</string>
    <string name="title_import">Import</string>
    <string name="title_export_spreadsheet">Export Spreadsheet</string>
    <string name="title_select_profile_to_import">Select Profiles to Import</string>
    <string name="select_all">Select all</string>
    <string name="confirm_import_profiles">%d profile(s) will be added as new records. Existing data will not be modified.</string>
    <string name="success_exporting_data">Export completed</string>
    <string name="error_exporting_data">Error exporting data</string>
    <string name="success_importing_data">Import completed, %d profile(s) and %d note(s) added</string>
    <string name="error_importing_data">Error importing data</string>
    <string name="error_no_profile_in_import_file">No profile found in the import file</string>
    <string name="export_progress_gathering">Gathering data…</string>
    <string name="import_progress_reading">Reading backup…</string>
    <string name="import_progress_importing">Importing data…</string>
    <string name="export_spreadsheet_progress_writing">Writing spreadsheet…</string>
    <plurals name="profile_count_notes">
        <item quantity="one">%d note</item>
        <item quantity="other">%d notes</item>
    </plurals>
    <plurals name="profile_count_medicines">
        <item quantity="one">%d medicine</item>
        <item quantity="other">%d medicines</item>
    </plurals>
    <plurals name="profile_count_reminders">
        <item quantity="one">%d reminder</item>
        <item quantity="other">%d reminders</item>
    </plurals>
    <plurals name="profile_count_attachments">
        <item quantity="one">%d attachment</item>
        <item quantity="other">%d attachments</item>
    </plurals>
    <string name="title_adherence">Adherence</string>
    <string name="adherence_last_7_days">Last 7 days</string>
    <string name="adherence_last_30_days">Last 30 days</string>
    <string name="adherence_taken">Taken</string>
    <string name="adherence_missed">Missed</string>
    <string name="adherence_no_data">No data for this period</string>
    <string name="adherence_percent" translatable="false">%d%%</string>
    <string name="adherence_taken_missed_format" translatable="false">%1$s %2$d · %3$s %4$d</string>
    <string name="adherence_chart_summary" translatable="false">Adherence chart: %d taken, %d missed over %d days</string>
    <string name="title_today_doses">Today\'s doses</string>
    <string name="today_doses_format">%1$d of %2$d doses</string>
    <string name="today_next_dose_format">next %1$s</string>
    <string name="today_missed_format">%1$s %2$s missed</string>
    <string name="today_all_done">All done</string>
    <string name="today_more_profiles">%1$d more profiles</string>
    <string name="today_show_less">Show less</string>
</resources>
