<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/container_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="@integer/grid_column_count">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add_profile"
                style="@style/Theme.Amediclog.HomeMenuButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_add_profile"
                app:icon="@drawable/ic_person_add_black"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add_note"
                style="@style/Theme.Amediclog.HomeMenuButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_add_note"
                app:icon="@drawable/ic_note_add_black"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />
        </androidx.gridlayout.widget.GridLayout>

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="@integer/grid_column_count">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_export_all"
                style="@style/Theme.Amediclog.HomeMenuButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_export_all"
                app:icon="@drawable/ic_upload_file_black"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_export_profiles"
                style="@style/Theme.Amediclog.HomeMenuButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_export_profiles"
                app:icon="@drawable/ic_upload_file_black"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_import"
                style="@style/Theme.Amediclog.HomeMenuButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_import"
                app:icon="@drawable/ic_download_file_black"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_export_spreadsheet"
                style="@style/Theme.Amediclog.HomeMenuButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_export_spreadsheet"
                app:icon="@drawable/ic_table_chart_black"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />
        </androidx.gridlayout.widget.GridLayout>

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="?attr/colorOnPrimary"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="?attr/colorSecondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_profiles"
            style="@style/Theme.Amediclog.BorderlessMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_profiles"
            app:icon="@drawable/ic_person_black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_notes"
            style="@style/Theme.Amediclog.BorderlessMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_notes"
            app:icon="@drawable/ic_menu_book_black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_settings"
            style="@style/Theme.Amediclog.BorderlessMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_settings"
            app:icon="@drawable/ic_settings_black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_donation"
            style="@style/Theme.Amediclog.BorderlessMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy_developer_a_coffee"
            app:icon="@drawable/ic_coffee_black" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.drawerlayout.widget.DrawerLayout>